@@ -4,7 +4,10 @@ type = narcotic
 base_dice = 1*d3+0
 inventory_sizes = 1 2
 inventory_texture = models/objetos/itens/garrafa1/texture_inv.png
+related_info = modeffects/drunk.dsl
 life_points = 20
+fortitude = 2
+will = 5
 armature_class = 10
 cost = 14
 weight = 1.2
