@@ -1,5 +1,5 @@
 /* 
-  DccNiTghtmare: a satiric post-apocalyptical RPG.
+  DccNiTghtmare: a satirical post-apocalyptical RPG.
   Copyright (C) 2005-2009 DNTeam <dnt@dnteam.org>
  
   This file is part of DccNiTghtmare.
@@ -32,12 +32,14 @@ barterWindow::barterWindow()
  *                             open                            *
  ***************************************************************/
 void barterWindow::open(character* s, character* b,
-                        guiInterface* inter, itemWindow* infoW)
+                        guiInterface* inter, itemWindow* infoW, 
+                        void* usedEngine)
 {
    dirs dir;
    /* Init Values */
    gui = inter;
    infoWindow = infoW;
+   curEngine = usedEngine;
 
    /* Set characters */
    seller = s;
@@ -90,7 +92,7 @@ void barterWindow::open(character* s, character* b,
    if(seller->inventories->getOpenedWindow() == NULL)
    {
       sellerWindow = new inventWindow(536,0,gettext("Inventory"),
-                                      seller, inter, infoWindow);
+                                      seller, inter, infoWindow, curEngine);
    }
    else
    {
@@ -100,7 +102,7 @@ void barterWindow::open(character* s, character* b,
    if(buyer->inventories->getOpenedWindow() == NULL)
    {
       buyerWindow = new inventWindow(0,0,gettext("Inventory"),
-                                     buyer, inter, infoWindow);
+                                     buyer, inter, infoWindow, curEngine);
    }
    else
    {
@@ -487,4 +489,5 @@ inventWindow* barterWindow::buyerWindow = NULL;
 menu* barterWindow::objectMenu = NULL;
 
 itemWindow* barterWindow::infoWindow = NULL;
+void* barterWindow::curEngine = NULL;
 
